--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="button_search">Поиск</string>
+    <string name="button_library">Медиатека</string>
+    <string name="button_settings">Настройки</string>
+    <string name="dark_theme">Темная тема</string>
+    <string name="share_settings">Поделиться приложением</string>
+    <string name="support_settings">Написать в поддержку</string>
+    <string name="user_agreement">Пользовательское соглашение</string>
+
 </resources>
