--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="release_date">Год</string>
     <string name="primary_genre_name">Жанр</string>
     <string name="country">Страна</string>
+    <string name="track_progress_time">00:00</string>
 
 </resources>
