--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="primary_genre_name">Жанр</string>
     <string name="country">Страна</string>
     <string name="track_progress_time">00:00</string>
+    <string name="unknown_date">Дата неизвестна</string>
 
 </resources>
