--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,10 @@
     <string name="country">Страна</string>
     <string name="track_progress_time">00:00</string>
     <string name="unknown_date">Дата неизвестна</string>
-
+    <string name="media">Медиатека</string>
+    <string name="empty_media">Ваша медиатека пуста</string>
+    <string name="newPlayList">Новый плейлист</string>
+    <string name="not_created_playlists">Вы не создали ни одного плейлиста</string>
+    <string name="favorite_tracks">Избранные треки</string>
+    <string name="playlists">Плейлисты</string>
 </resources>
